[gd_scene load_steps=3 format=3 uid="uid://bqr84pyge5ytb"]

[ext_resource type="Script" uid="uid://sseoah1h801h" path="res://project/scripts/i_body.gd" id="1_6y8yy"]
[ext_resource type="Texture2D" uid="uid://cmyxisrkggodh" path="res://project/assets/I-TetrominoB.png" id="2_tbo20"]

[node name="I_body" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_6y8yy")

[node name="I_collision" type="CollisionPolygon2D" parent="."]
position = Vector2(-32, -16)
polygon = PackedVector2Array(0, 0, 0, 16, 64, 16, 64, 0)

[node name="I_shape" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_tbo20")
centered = false
offset = Vector2(-32, -16)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="Selection_box" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-32, 8, 32, 8, 32, -8, -32, -8)

[node name="RayCastA" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(24, -8)
target_position = Vector2(0, 16)
hit_from_inside = true

[node name="RayCastB" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(8, -8)
target_position = Vector2(0, 16)
hit_from_inside = true

[node name="RayCastC" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(-8, -8)
target_position = Vector2(0, 16)
hit_from_inside = true

[node name="RayCastD" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(-24, -8)
target_position = Vector2(0, 16)
hit_from_inside = true

[node name="RayCastE" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(24, -8)
target_position = Vector2(16, 0)
hit_from_inside = true

[node name="RayCastF" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(-24, -8)
target_position = Vector2(-16, 0)
hit_from_inside = true

[node name="RayCastG" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(-24, -8)
target_position = Vector2(0, -16)
hit_from_inside = true

[node name="RayCastH" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(-8, -8)
target_position = Vector2(0, -16)
hit_from_inside = true

[node name="RayCastI" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(8, -8)
target_position = Vector2(0, -16)
hit_from_inside = true

[node name="RayCastJ" type="RayCast2D" parent="." groups=["shape_raycast"]]
position = Vector2(24, -8)
target_position = Vector2(0, -16)
hit_from_inside = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
